tests/ui/non_integer_literal.stderr
error: expected integer literal
 --> tests/ui/non_integer_literal.rs:5:17
  |
5 |     #[exit_code("one")]
  |                 ^^^^^
